--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 
-This code will take a PDF file called document.pdf and generate an MP3 file. The PDF file is specified by the pdf_file parameter, the name of the output MP3 file is specified by the mp3_file parameter, and the location to store the MP3 file is specified by the store_location parameter.
+This code will take a PDF file called document.pdf and generate an MP3 file. The PDF file is specified by the pdf_file parameter, the name of the output MP3 file is specified by the mp3_file parameter, and the location to store the MP3 file is specified by the store_location parameter. User input is required.
